# cpp_test_project

./: CMakeLists.txt  Sales_data.cpp  Sales_data.h  Sales_item.cpp  Sales_item.h  Screen.cpp  Screen.h  Student.cpp  Student.h  main.cpp  readme.md  test1.cpp
